plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '2.3.20'
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.21'
    id 'xyz.jpenilla.run-paper' version '3.0.2'
}

group = 'com.github.darksoulq'
version = '2.0.4-mc.26.1.2'

def targetJavaVersion = 25

java {
    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    if (JavaVersion.current() < javaVersion) {
        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    }
    withSourcesJar()
    withJavadocJar()
}

kotlin {
    jvmToolchain(25)
}

repositories {
    mavenCentral()

    maven {
        name = 'papermc-repo'
        url = uri('https://repo.papermc.io/repository/maven-public/')
    }

    maven {
        name = 'sonatype'
        url = uri('https://oss.sonatype.org/content/groups/public/')
    }

    maven {
        name = 'magmaguy-repo'
        url = uri('https://repo.magmaguy.com/releases')
    }
    maven {
        url = 'https://repo.extendedclip.com/releases/'
    }
    maven {
        name = "faststatsReleases"
        url = uri("https://repo.faststats.dev/releases")
    }
}

dependencies {
    paperweight.paperDevBundle('26.1.2.build.7-alpha')
    compileOnly("dev.faststats.metrics:bukkit:0.22.0")
    compileOnly('org.jetbrains.kotlin:kotlin-stdlib')
    compileOnly("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2")

    compileOnly('org.xerial:sqlite-jdbc:3.44.1.0')
    compileOnly('org.apache.pdfbox:fontbox:3.0.5')
    compileOnly('com.fasterxml.jackson.core:jackson-databind:2.17.0')
    compileOnly('com.fasterxml.jackson.core:jackson-core:2.17.0')
    compileOnly 'org.mongodb:mongodb-driver-sync:5.0.0'
    compileOnly 'redis.clients:jedis:5.1.2'
    compileOnly 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
    compileOnly 'org.postgresql:postgresql:42.7.3'
    compileOnly 'com.h2database:h2:2.2.224'

    compileOnly('com.magmaguy:ResourcePackManager:1.7.1')
    compileOnly 'me.clip:placeholderapi:2.11.7'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'

    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        options.release.set(targetJavaVersion)
    }
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset = 'UTF-8'
    filesMatching('paper-plugin.yml') {
        expand props
    }
}

javadoc {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.memberLevel = JavadocMemberLevel.PUBLIC
    options.author = true
    options.version = true
    options.links('https://docs.oracle.com/en/java/javase/21/docs/api/')

    exclude '**/PacketInterceptor.java'
    exclude '**/PacketTranslator.java'
    exclude '**/InternalCommand.java'
    exclude '**/BlockManager.java'
    exclude '**/EntityManager.java'
    exclude '**/MapLoader.java'
    exclude '**/AbyssalLib.java'
    exclude '**/Bootstrap.java'
    exclude '**/Loader.java'
    exclude '**/AbyssalLibBlockSerializer.java'
    exclude '**/AbyssalLibProvider.java'
    exclude '**/Adapter.java'
    exclude '**/internal/**'
    exclude '**/component/builtin/**'
}

tasks.runServer {
    minecraftVersion '26.1.2'
}

artifacts {
    archives sourcesJar
    archives javadocJar
}
